# jetsonBackup

./: Dockerfile  README.md
Documentation/: 99-usb-serial.rules
src/gps/: CMakeLists.txt  package.xml
src/gps/scripts/: map.py  ubx.py
src/planner/: CMakeLists.txt  package.xml
src/planner/launch/: ekf.launch  sensors.launch  sensors2.launch
src/planner/scripts/: data_reciever.py
src/planner/src/: planner.cpp  plannerNoGps.cpp
src/planner/src/include/: planner.hpp  plannerNoGps.hpp
src/planner/srv/: img.srv
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: sim.launch
src/robot/meshes/: aruco0.stl  aruco1.stl  aruco2.stl  stand.stl
src/robot/rviz_config/: config.rviz
src/robot/src/: simulation_imu.cpp
src/robot/urdf/: arrow1.xacro  arrow2.xacro  martin.gazebo  martin.trans  martin.xacro  materials.xacro  obj.xacro
src/robot/worlds/: irc.world  urc.world  urc_1.world
src/sensors/: CMakeLists.txt  package.xml
src/sensors/launch/: camera.launch  camera2.launch  sensors.launch
src/sensors/msg/: imu_data.msg
src/sensors/scripts/: imu.py  lidar.py  ubx.py
src/sensors/src/: ditch_detect.cpp  imu_node.cpp  lidarData.cpp  zed2feed.cpp
src/stereo/: CMakeLists.txt  package.xml
src/stereo/msg/: yolotag.msg
src/stereo/scripts/: aruco.py  convert.py  depth.py  inference.py
src/stereo/srv/: detect.srv  distance_service.srv
src/waveshare/: CMakeLists.txt  package.xml
src/waveshare/LEDbulb/: LEDbulb.ino
src/waveshare/src/: roverstate.cpp  statepublisher.cpp
src/ydlidar_ros_driver/launch/: X4-Pro.launch
(+8 files in other folders)
